fixed display on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -66,7 +66,7 @@ p {
 .link {
     text-align: center;
     margin: 2%;
-    flex: 1 1 200px;
+    flex: 1 1 100px;
 }
 
 .link a {
